I inested an image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+ <main>
+  <h1 id="title">
+   Omar Suleiman
+  </h1>
+  <p> American Islamic scholar </p>
+  <figure id="img-div">
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6IPV4TXJjw827BMobcB4MIejMXOXzJL9Ikj31B9uxEw&s" alt="Omar Suleiman 's photogi">
+  </figure>
+ </main>
 </body>
 </html>
