I added a photo caption

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   </h1>
   <p> American Islamic scholar </p>
   <figure id="img-div">
-   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6IPV4TXJjw827BMobcB4MIejMXOXzJL9Ikj31B9uxEw&s" alt="Omar Suleiman 's photogi">
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6IPV4TXJjw827BMobcB4MIejMXOXzJL9Ikj31B9uxEw&s" alt="Omar Suleiman 's photo">
+  <figcaption id="img-caption">
+   Dr. Omar Suleiman is the President of the Yaqeen Institute for Islamic Research and a professor of Islamic Studies at Southern Methodist University
+  </figcaption>
   </figure>
  </main>
 </body>
