I added ids to the elements.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id="title">
    Omar Suleiman
   </h1>
-  <p> American Islamic scholar </p>
+  <p id="extra"> American Islamic scholar </p>
   <figure id="img-div">
    <img id="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6IPV4TXJjw827BMobcB4MIejMXOXzJL9Ikj31B9uxEw&s" alt="Omar Suleiman 's photo">
   <figcaption id="img-caption">
@@ -34,7 +34,7 @@
 <p id="tribute-info">He was (as of May 2019) Adjunct Professor of Islamic Studies at Southern Methodist University, where he was also a member of the Maguire Ethics Center Advisory Board.</p>
 <br>
 <p id="tribute-info">He is (as of September 2022) Resident Scholar of the Valley Ranch Islamic Center and co-chair of Faith Forward Dallas at Thanks-Giving Square.</p>
-<p>If you have time, you should read more about this incredible human being on his <a id="#tribute-link" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</p>
+<p id="extra">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</p>
 </main>
 </body>
 </html>
