I changed the photo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </h1>
   <p id="extra"> American Islamic scholar </p>
   <figure id="img-div">
-   <img id="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6IPV4TXJjw827BMobcB4MIejMXOXzJL9Ikj31B9uxEw&s" alt="Omar Suleiman 's photo">
-  <figcaption id="img-caption">
+   <img id="image" src="https://th.bing.com/th/id/R.1d4ab77eb8fbd81068b50c2b0edd4e74?rik=6Z2gv2%2bBl6rm5g&pid=ImgRaw&r=0" alt="Omar Suleiman 's photo">
+  <br>
+   <figcaption id="img-caption">
    Dr. Omar Suleiman is the President of the Yaqeen Institute for Islamic Research and a professor of Islamic Studies at Southern Methodist University
   </figcaption>
   </figure>
