I correct html issue

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p id="tribute-info">He was (as of May 2019) Adjunct Professor of Islamic Studies at Southern Methodist University, where he was also a member of the Maguire Ethics Center Advisory Board.</p>
 <br>
 <p id="tribute-info">He is (as of September 2022) Resident Scholar of the Valley Ranch Islamic Center and co-chair of Faith Forward Dallas at Thanks-Giving Square.</p>
-<p id="extra">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</p>
+<p id="extra">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" rel="noopener" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</p>
 </main>
 </body>
 </html>
