I added some styles to my page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    Dr. Omar Suleiman is the President of the Yaqeen Institute for Islamic Research and a professor of Islamic Studies at Southern Methodist University
   </figcaption>
   </figure>
+  <h2>Here's a time line of Dr. Omar life:</h2>
   <p id="tribute-info">
    Omar Suleiman (born June 3, 1986) is an American Islamic scholar and civil rights activist. He is the founding president of the Yaqeen Institute for Islamic Research and an adjunct professor of Islamic studies and member of the Ethics Center Advisory Board at Southern Methodist University.
   </p>
