I bring changes to html and css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p id="tribute-info">He is (as of September 2022) Resident Scholar of the Valley Ranch Islamic Center and co-chair of Faith Forward Dallas at Thanks-Giving Square.</p>
 <p class="quote"> “What you see in other people is a reflection of yourself. A person of goodness sees goodness in others and a person of evil sees evil in others.”</p>
 <p class="quote-author" >— Omar Suleiman</p>
-<h3 id="extra">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" rel="noopener" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</h3>
+<h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" rel="noopener" href="https://www.facebook.com/imamomarsuleiman/">Facebook</a>.</h3>
 </main>
 </body>
 </html>
